fix text cutoff issue

--- a/src/app/contacts-page/dialogs/contact-edit/contact-edit.component.scss
+++ b/src/app/contacts-page/dialogs/contact-edit/contact-edit.component.scss
@@ -11,6 +11,7 @@
 
     .name {
       font-size: 20px;
+      line-height: 1.15;
       max-width: 100%;
     }
 
