--- a/src/app/contacts-page/header/header/header.component.scss
+++ b/src/app/contacts-page/header/header/header.component.scss
@@ -23,6 +23,7 @@ a {
   .logo {
     margin-left: 40px;
     font-size: 22px;
+    line-height: 1.15;
     .logo1 {
       font-weight: 400;
     }
