--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -6,8 +6,6 @@ html, body {
 }
 
 body {
-  font-size: 14px;
-  font-weight: 400;
   color: rgba(0,0,0,.87);
 }
 
